Profile Image Upload and Retrieved Succesfully

--- a/Coursera.csproj
+++ b/Coursera.csproj
@@ -113,6 +113,8 @@
 
   <ItemGroup>
     <Folder Include="Areas\Student\Models\" />
+    <Folder Include="wwwroot\assets2\img\Profile\Admin\" />
+    <Folder Include="wwwroot\assets2\img\Profile\Student\" />
   </ItemGroup>
 
 </Project>
