--- a/appsettings.json
+++ b/appsettings.json
@@ -13,7 +13,7 @@
     "Password": "wjwt rach dqtm nojq"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ANANDKUMAR\\SQLEXPRESS;Initial Catalog=Coursera;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Data Source=ANANDKUMAR\\SQLEXPRESS;Initial Catalog=Coursera;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True"
   }
 
 }
