Connection String are Changed

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,7 +13,8 @@
     "Password": "wjwt rach dqtm nojq"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ANANDKUMAR\\SQLEXPRESS;Initial Catalog=Coursera;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=ANAND\\SQLEXPRESS;Initial Catalog=Coursera;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;"
   }
 
 }
+//Data Source=ANAND\SQLEXPRESS;Initial Catalog=Coursera;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False
